fix: correct Illegal character in html

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                     <img title="Git" class="icon-box__item" src="icons/git.png" alt="icon git">
                     <img title="Figma" class="icon-box__item" src="icons/Figma.png" alt="icon Figma">
                     <img title="Photoshop" class="icon-box__item" src="icons/photoshop.png" alt="icon photoshop">
-                    <img title="Premier pro" class="icon-box__item" src="icons/premier pro.png" alt="icon premier pro">
+                    <img title="Premier pro" class="icon-box__item" src="icons/premier-pro.png" alt="icon premier pro">
                     <img title="illustrator"  class="icon-box__item" src="icons/illustrarot.png" alt="icon illustrator">
                 </div>
 
